@@ -30,3 +30,4 @@
 #import "ZBarReaderViewController.h"
 #import "ZBarReaderController.h"
 #import "ZBarCaptureReader.h"
+#import "ZBarHelpController.h"
